<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.onurerdem.shoppingapp.feature.productDetail.ProductDetailViewModel" />

    </data>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".feature.productDetail.ProductDetailFragment">

            <ImageView
                android:id="@+id/ivProductImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/app_color_1"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@+id/ivProductImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/open_sans"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/men_jacket" />

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvProductName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/app_color_1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/_100_dolar" />



            <TextView
                android:id="@+id/tvProductDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tvProductPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/app_color_1"
                android:textSize="16sp"
                android:text="@string/this_jacket_is_very_good" />

            <LinearLayout
                android:id="@+id/llAddToBasket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvProductDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/bttnAddToBasket"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_basket"
                    />
                <Button
                    android:id="@+id/bttnDecreaseQuantity"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/minus"
                    android:layout_marginStart="12dp"
                    />
                <TextView
                    android:id="@+id/tvProductQuantity"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/app_color_1"
                    android:text="@string/_1"/>
                <Button
                    android:id="@+id/bttnIncreaseQuantity"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/plus"
                    />
                <LinearLayout
                    android:id="@+id/llTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:textColor="@color/app_color_1"
                        android:text="@string/total_price"/>
                    <TextView
                        android:id="@+id/tvProductDetailTotalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:layout_gravity="center"
                        android:textColor="@color/app_color_1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/_0_dolar"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
